--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="rightside">
         <img
-          src="/images/Rectangle 1.svg"
+          src="images/Rectangle 1.svg"
           alt="Error Loading Image"
         />
         <div class="leftdiv">
