--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <div><img src="images/Vector (1).svg" alt="Error Loading Image "> </div>
   <div>   
     <img src="images/Vector (3).svg" alt="Error Loading Image ">
-    <img src="/images/Vector (2).svg" alt="Error Loading Image "> 
+    <img src="images/Vector (2).svg" alt="Error Loading Image "> 
   </div>
   <div> <img src="images/Vector (5).svg" alt="Error Loading Image "> </div>
   <div><img src="images/Vector (4).svg" alt="Error Loading Image "> </div>
